syntax = "proto3";

/*
# Data Service (v1)
The data service is responsible for handling the requests for getting/sharing data with the user.
*/
package data.v1;

option go_package = "github.com/bxxf/znvo-backend/gen/api/data/v1;data";



// The Data service is responsible for handling the requests for getting/sharing data with the user.
service DataService {
    // GetSharedData returns the shared data for the user.
    rpc GetSharedData(GetSharedDataRequest) returns (GetSharedDataResponse);
    // ShareUserData shares the user data with the user.
    rpc ShareUserData(ShareDataRequest) returns (ShareDataResponse);
}

// GetSharedDataRequest is the request for getting the shared data.
message GetSharedDataRequest {
    // The user id.
    string user_token = 1;
}

// GetSharedDataResponse is the response for getting the shared data.
message GetSharedDataResponse {
    // The shared data.
    string data = 1;
}

// ShareDataRequest is the request for sharing the user data.
message ShareDataRequest {
    // The user id.
    string user_token = 1;
    // Recipients user id.
    string recipient = 2;
    // The data to share.
    string data = 3;
}

// ShareDataResponse is the response for sharing the user data.
message ShareDataResponse {
    // The shared data.
    bool success = 1;
}